--- a/ProjetJava/ProjetJava/src/main/resources/application.properties
+++ b/ProjetJava/ProjetJava/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://0.0.0.0:3306/madbamoi
-spring.datasource.username=root
-spring.datasource.password=toor
+spring.datasource.url=jdbc:mysql://localhost:3306/bddjava?&useJDBCCompliantTimezoneShift=true&serverTimezone=UTC
+spring.datasource.username=coursJava
+spring.datasource.password=noubliejamais
