--- a/ProjetJava/ProjetJava/src/main/resources/application.properties
+++ b/ProjetJava/ProjetJava/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/llebert?&useJDBCCompliantTimezoneShift=true&serverTimezone=UTC&autoReconnect=true&useSSL=false
-spring.datasource.username=llebert
-spring.datasource.password=2596
+spring.datasource.url=jdbc:mysql://localhost:3306/projetjava?&useJDBCCompliantTimezoneShift=true&serverTimezone=UTC
+spring.datasource.username=coursJava
+spring.datasource.password=noubliejamais
