--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/projetjava?&useJDBCCompliantTimezoneShift=true&serverTimezone=UTC
-spring.datasource.username=coursJava
-spring.datasource.password=noubliejamais
+spring.datasource.url=jdbc:mysql://localhost:3306/mabase?&useJDBCCompliantTimezoneShift=true&serverTimezone=UTC
+spring.datasource.username=eliane
+spring.datasource.password=paelinck
